# Renderer

./: .gitignore  CMakeLists.txt  README.md
src/PathTracer/: aabb.h  bvh.h  camera.h  colour.h  hittable.h  hittable_list.h  main.cc  material.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  sphere.h  tri.h  vec3.h
src/ToyPathTracer/: aabb.h  bvh.h  camera.h  colour.h  constant_medium.h  hittable.h  hittable_list.h  image_utils.h  interval.h  main.cc  material.h  quad.h  sphere.h  texture.h  tri.h  utils.h  vec3.h
